Fixed spelling mistakes in README

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This is an example project for first practice!
+This is an example project for the first practice!
 Author: Maksud Saidhodzhaev
 Mail: maksud.saidhodzhaev@mail.ru
